# Stupidex-Oficial-V2

./: .env.example  .gitignore  IMPLEMENTATION_REPORT.md  README.md  SECURITY.md  SQUARECLOUD.md  Stupidex-SquareCloud.zip.sha256  analyze_design.py  final_test.py  git_push.bat  gunicorn.conf.py  pyproject.toml  requirements.txt  squarecloud.app
scripts/: start-square.sh
src/stupidex/: config.py  db.py  providers.py  security.py  web.py  workspaces.py
src/stupidex/static/: app.js  index.html  index.original.html
tests/: test_providers.py  test_security.py
