[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stupidex-square"
version = "1.0.0"
description = "Stupidex AI coding workspace for Square Cloud"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0,<4",
  "Werkzeug>=3.0,<4",
  "gunicorn>=21,<24",
  "python-dotenv>=1.0,<2",
  "cryptography>=42,<46",
  "litellm>=1.40,<2",
  "requests>=2.31,<3",
]

[project.scripts]
stupidex-web = "stupidex.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stupidex = ["static/**/*"]
